--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
+    "@vueuse/core": "^11.1.0",
     "pinia": "^2.2.4",
     "vue": "^3.4.29",
     "vue-router": "^4.4.5"
