--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
+    "@vitejs/plugin-basic-ssl": "^1.1.0",
     "axios": "^1.7.7",
     "pinia": "^2.2.4",
     "vue": "^3.4.29",
