--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@vueuse/core": "^11.1.0",
     "axios": "^1.7.7",
     "pinia": "^2.2.4",
+    "qrcode.vue": "^3.6.0",
     "vue": "^3.4.29",
     "vue-router": "^4.4.5"
   },
