--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
+    "@microsoft/signalr": "^8.0.7",
     "@vueuse/core": "^11.1.0",
     "axios": "^1.7.7",
     "pinia": "^2.2.4",
