--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "pinia": "^2.2.4",
     "qrcode.vue": "^3.6.0",
     "vue": "^3.4.29",
+    "vue-load-image": "^1.1.0",
     "vue-router": "^4.4.5"
   },
   "devDependencies": {
