Add Swiper for corousel component

--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "axios": "^1.7.7",
     "pinia": "^2.2.4",
     "qrcode.vue": "^3.6.0",
+    "swiper": "^11.1.14",
     "vue": "^3.4.29",
     "vue-load-image": "^1.1.0",
     "vue-router": "^4.4.5"
