--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "swiper": "^11.1.14",
     "vue": "^3.4.29",
     "vue-load-image": "^1.1.0",
-    "vue-router": "^4.4.5"
+    "vue-router": "^4.4.5",
+    "vue3-otp-input": "^0.5.21"
   },
   "devDependencies": {
     "@rushstack/eslint-patch": "^1.8.0",
