--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "qrcode.vue": "^3.6.0",
     "swiper": "^11.1.14",
     "vue": "^3.4.29",
+    "vue-i18n": "^10.0.5",
     "vue-load-image": "^1.1.0",
     "vue-router": "^4.4.5",
     "vue3-otp-input": "^0.5.21"
